--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.advertisement.PlaceOrder"></activity>
+        <activity android:name=".activity.advertisement.PaymentSelection"></activity>
+        <activity android:name=".activity.advertisement.PlaceOrder" />
         <activity android:name=".activity.advertisement.OrderActivity" />
         <activity android:name=".activity.athentication.register" />
         <activity android:name=".activity.athentication.login" />
