--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.newPost.NewAd"
-            android:parentActivityName=".ui.home.MainActivity"></activity>
+        <activity android:name=".ui.addphone.AddNewNumber"></activity>
+        <activity
+            android:name=".ui.newPost.NewAd"
+            android:parentActivityName=".ui.home.MainActivity" />
         <activity android:name=".ui.SplashMainAppActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,7 +47,7 @@
         <activity
             android:name=".ui.newPost.NewAdvertisement"
             android:parentActivityName=".ui.home.MainActivity" />
-        <activity android:name=".ui.home.MainActivity"></activity>
+        <activity android:name=".ui.home.MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
