manuka - edit ad started

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.addphone.AddNewNumber"></activity>
+        <activity android:name=".ui.editAd.EditAd"></activity>
+        <activity android:name=".ui.addphone.AddNewNumber" />
         <activity
             android:name=".ui.newPost.NewAd"
             android:parentActivityName=".ui.home.MainActivity" />
