--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     implementation 'com.sun.mail:android-mail:1.6.4'
     //implementation 'com.sun.mail:android-activation:1.6.5'
 
+    implementation 'com.github.smarteist:autoimageslider:1.3.9-appcompat'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
