manuka - edit profile added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
