--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
