--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.administration.advertisement.MoreActionsOnAd"></activity>
+        <activity android:name=".ui.administration.advertisement.AdsFilter"></activity>
+        <activity android:name=".ui.administration.advertisement.SelectCategoryAndFilter" />
+        <activity android:name=".ui.administration.advertisement.MoreActionsOnAd" />
         <activity android:name=".ui.administration.advertisement.AdvertisementMain" />
         <activity android:name=".ui.administration.home.DashboardHome" />
         <activity android:name=".ui.profile.Profile" />
