--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,8 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    compile 'com.whiteelephant:monthandyearpicker:1.3.0'
+    implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
+    implementation 'com.liuzhuang.opensource:afgridlayout:1.0.0'
 
 }
 
