--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
     implementation "androidx.gridlayout:gridlayout:1.0.0"
+
+    implementation 'com.github.javafaker:javafaker:0.15'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
