--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.administration.order.MoreOnOrder"></activity>
+        <activity android:name=".ui.administration.order.SingleProductAnalysis"></activity>
+        <activity android:name=".ui.administration.order.MoreOnOrder" />
         <activity android:name=".ui.administration.order.OrdersMain" />
         <activity android:name=".ui.administration.advertisement.AdsFilter" />
         <activity android:name=".ui.administration.advertisement.SelectCategoryAndFilter" />
