--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.advertisement.LocationPicker"></activity>
+        <activity android:name=".ui.advertisement.FilterSearchResult"></activity>
+        <activity android:name=".ui.advertisement.LocationPicker" />
         <activity android:name=".ui.advertisement.CategoryPicker" />
         <activity android:name=".ui.advertisement.HomeAdSearch" />
         <activity android:name=".ui.administration.order.SingleProductAnalysis" />
