manuka - similar ads added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     implementation 'com.algolia:algoliasearch-android:3.+'
 
     implementation 'com.github.irfaan008:IRBottomNavigationView:1.0.1'
+    implementation 'com.github.santalu:aspect-ratio-imageview:1.0.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
