--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
 
     implementation 'com.github.irfaan008:IRBottomNavigationView:1.0.1'
     implementation 'com.github.santalu:aspect-ratio-imageview:1.0.9'
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
