--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.chat.ChatMainActivity"/>
+        <activity android:name=".ui.chat.AboutUsActivity"></activity>
+        <activity android:name=".ui.chat.AboutUsMainActivity" />
         <activity android:name=".ui.advertisement.FilterSearchResult" />
         <activity android:name=".ui.advertisement.LocationPicker" />
         <activity android:name=".ui.advertisement.CategoryPicker" />
@@ -59,9 +60,7 @@
         </activity>
         <activity android:name=".ui.Order.BuyNow" />
         <activity android:name=".ui.favaourite.divya_Edit" />
-        <activity android:name=".ui.favaourite.divya_MActivity" />
-
-        <!-- Ravindu -->
+        <activity android:name=".ui.favaourite.divya_MActivity" /> <!-- Ravindu -->
         <activity android:name=".ui.getintouch.GetInTouchActivity" />
         <activity android:name=".ui.getintouch.AboutUsActivity" />
         <activity android:name=".ui.getintouch.AddNewBugActivity" />
@@ -70,21 +69,13 @@
         <activity android:name=".ui.getintouch.BugsActivity" />
         <activity android:name=".ui.getintouch.EditBugActivity" />
         <activity android:name=".ui.getintouch.ViewBugActivity" />
-
-
         <activity android:name=".ui.getintouch.BugsActivity2" />
-
         <activity android:name=".ui.getintouch.DeleteBugActivity" />
-
-
-
-        <activity android:name=".ui.getintouch.ViewSuggestionAdmin"></activity>
+        <activity android:name=".ui.getintouch.ViewSuggestionAdmin" />
         <activity android:name=".ui.getintouch.ViewAllSuggestionsAdmin" />
         <activity android:name=".ui.getintouch.ViewBugAdmin" />
         <activity android:name=".ui.getintouch.ViewAllBugsAdmin" />
         <activity android:name=".ui.getintouch.GetInTouchAdminPanel" />
-
-
         <activity android:name=".ui.advertisement.Donations" />
         <activity android:name=".ui.advertisement.Advertisement" />
         <activity android:name=".ui.advertisement.Myadds" />
@@ -92,8 +83,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-2612826891658748~3883957460"/>
-
+            android:value="ca-app-pub-2612826891658748~3883957460" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
