manuka - timmer aded

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,7 +116,8 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
-
+    
+    implementation 'com.github.Spikeysanju:ZoomRecylerLayout:1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
