--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.Promotion.PromotionMain"></activity>
+        <activity android:name=".ui.Promotion.Payment"></activity>
+        <activity android:name=".ui.Promotion.PromotionMain" />
         <activity android:name=".ui.getintouch.BugStatisticsActivity" />
         <activity android:name=".ui.chat.AboutUsMainActivity" />
         <activity android:name=".ui.advertisement.FilterSearchResult" />
