--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
 
-
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -30,11 +28,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:windowSoftInputMode="adjustPan"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.Promotion.Payment"></activity>
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="adjustPan">
+        <activity android:name=".ui.Promotion.PaymentMade"></activity>
+        <activity android:name=".ui.Promotion.Payment" />
         <activity android:name=".ui.Promotion.PromotionMain" />
         <activity android:name=".ui.getintouch.BugStatisticsActivity" />
         <activity android:name=".ui.chat.AboutUsMainActivity" />
