--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustPan">
-        <activity android:name=".ui.advertisement.PendingRejectedAds"></activity>
+        <activity android:name=".ui.favaourite.MoreOnFavourites"></activity>
+        <activity android:name=".ui.advertisement.PendingRejectedAds" />
         <activity android:name=".ui.Promotion.PromotionHistory" />
         <activity android:name=".ui.Promotion.PaymentMade" />
         <activity android:name=".ui.Promotion.Payment" />
