manuka - app update

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,13 @@ dependencies {
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
 
     implementation 'com.github.chivorns.androidx:smartmaterialspinner:1.2.1'
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+
+    implementation 'com.google.firebase:firebase-inappmessaging-display'
+    implementation 'com.google.firebase:firebase-analytics'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
